# data_structures_and_algorithms

./: .gitignore  CMakeLists.txt  LICENSE  README.md
basic-concepts/: 01.1-inheritance.cpp  01.2-inheritance.cpp  02.1-template.cpp  02.2-template.cpp  CMakeLists.txt
common-algorithms/: .gitignore  01-sort_words.cpp  02-inspect_bits.cpp  03-user_info.cpp  04-quadratic_equation.c  05-watched_videos.c  06-binary_search_tree.c  07-merge_names.cpp  08-sorted_search.cpp  08-sorted_search_1.cpp  09-song.cpp  10-quadratic_equation.cpp  11-two_sum.cpp  11-two_sum_1.cpp  12-binary_search_tree.cpp  13-pipeline.cpp  14-train_composition.cpp  14-train_composition_map.cpp  15-multiple_choice_test.cpp  16-user_input.cpp  17-count4.cpp  18-count3.cpp  19-valid_mountain_array.cpp  CMakeLists.txt  test.cpp  test2.cpp
standard-library-functions-c/: 01-float.c  02-bsearch-lr.c  02-extern.c  03-bsearch-n.c  03-link_list.c  04-bsearch-buildin.c  04-float.c  05-memory_stack.c  06-nearest-zero-buildin.c  06-short.c  07-qsort.c  07-snail_arr.c  08-qsort-buildin.c  08-switch-case.c  09-linked-list.c  09-strtok.c  10-exist.c  11-prime.c  12-gcd.c  13-lcm.c  14-factorial.c  15-stack.c  16-stack-linkedlist.c  17-queue.c  18-bin-tree.c  19-river-size.c  20-Nth-fibonacy.c  22-bit-op.c  24-pointer.c  25-snail_arr.c  26-template.cpp  CMakeLists.txt  mmap_ex.c
